Details
-
Bug
-
Resolution: Done
-
P2: Important
-
4.8.1, 5.0.0
-
None
-
8643e1992f6c62983345f89d793742b3449a69ea
Description
While the fix mentioned in QTBUG-24694 helps in searching the right directories for libssl and libcrypto, it still requires that both libraries are in the same directory.
This is not the case at least on Fedora, where there is /lib64/libcrypto.so.10 but /usr/lib64/libssl.so.10.
loadOpenSsl() needs to be changed to take this into account.
This (and the fix for QTBUG-24694) is also needed in 4.8 as QtCreator and the QtSDK need SSL to work.
Attachments
Issue Links
- relates to
-
QTBUG-24694 libssl and libcrypto detection algorithms fail after Ubuntu upgrade
-
- Closed
-